--- a/serenity.properties
+++ b/serenity.properties
@@ -1,6 +1,9 @@
 # Define the default driver
 #webdriver.driver=phantomjs
 
+webdriver.chrome.driver=C:\DRIVERS\chromedriver.exe
+webdriver.chrome.args=["headless"]
+
 # Appears at the top of the reports
 serenity.project.name = Demo Project using Serenity and JUnit
 
