--- a/serenity.properties
+++ b/serenity.properties
@@ -2,7 +2,7 @@
 #webdriver.driver=phantomjs
 
 webdriver.chrome.driver=C:\DRIVERS\chromedriver.exe
-webdriver.chrome.args=["headless"]
+headless.mode = true
 
 # Appears at the top of the reports
 serenity.project.name = Demo Project using Serenity and JUnit
