--- a/serenity.properties
+++ b/serenity.properties
@@ -1,7 +1,7 @@
 # Define the default driver
 #webdriver.driver=phantomjs
 
-webdriver.chrome.driver=C:\DRIVERS\chromedriver.exe
+webdriver.chrome.driver=C:/DRIVERS/chromedriver.exe
 headless.mode = true
 
 # Appears at the top of the reports
